Automatically download right Lua version for compilation

--- a/autoload/Makefile
+++ b/autoload/Makefile
@@ -1,18 +1,39 @@
 LUA := -llua -lm -ldl  
 
 LDFLAGS += $(LUA)
-CFLAGS += -Wall -Wextra -fPIC -g
+CFLAGS += -Wall -Wextra -fPIC -g -I lua/src/ -L./
 
 CC ?= gcc
 
 all : stream_helper.so
 
-%o : %c
+%o : %c liblua.a
 	$(CC) -c $< $(CFLAGS) -o $@
 
-%.so : %.o
+%.so : %.o liblua.a
 	$(CC) -o $@ $(CFLAGS) $(LDFLAGS) -shared $<
 
 clean :
 	rm -rf *.o
 	rm -rf *.so
+	rm -rf lua*
+	rm -rf liblua.a
+
+lua_version : lua_version.vim
+	vim --cmd "source $<"
+
+lua.tar.gz: lua_version
+	curl -R http://www.lua.org/ftp/lua-$(shell cat $<).tar.gz -o $@
+
+liblua.a : lua.tar.gz lua_version
+	tar xzf $< && \
+		mv lua-$(shell cat lua_version) lua && \
+		cd lua && \
+		$(MAKE) linux || $(MAKE) && \
+		cp src/liblua.a ..
+
+lua_version.vim :
+	echo ":lua f = io.open('lua_version', 'w'); f:write(vim.lua_version); f:close()" > $@
+	echo ":q" >> $@
+
+
